feat: add handler, service for finding extended stages
